update error 15 juni
